v0.3.7
* Added: Grugonim boss encounter (template).
* Added: Inwar Darktide boss encounter (template).
* Added: Sicaron boss encounter (template).
* Added: Estrode boss encounter (template).
* Added: Added more translation templates to various bosses.
* Fixed: Vladmir Prime Ancient Flames.
----
v0.3.6
* Added: Inquisitor Garau, French client support.
* Added: Inquisitor Garau, French client support for Arcane Essence.
* Added: Inquisitor Garau, partial French client support for Arcane Porters.
* Added: Inquisitor Garau, partial French client support for Infused Crawlers.
* Added: Soulrender Zilas boss encounter (template).
* Added: Matron Zamira boss encounter (template).
* Added: Vladmal Prime boss encounter.
* Added: Vladmal Prime's Ancient Flame timer.
* Added: Murdantix Demonic Blast timer.
* Added: Murdantix Soul Trauma timer.
* Added: Murdantix castbar.
* Added: Matron Zimara castbar.
* Added: Soulrender Zilas castbar.
* Added: Vladmal Prime castbar.
* Added: Inquisitor Garau castbar.
* Fixed: Inquisitor Garau encounter reset.
----
v0.3.5
* Fixed: French Menu options.
* Fixed: New settings method now being used by King's Monitor.
----
v0.3.4
* Fixed: King Molinar's data not resetting correctly after a wipe.
* Change: Prince Dollin's cast bar now uses new Addon cast bar interface.
* Change: King Molinar's cast bar now uses new Addon cast bar interface.
* Change: Further adjustments to Encounter monitoring.
* Change: Notify type timers now link to an Encounter rather than a boss.
* Change: Saved Variables improved again for version differences.
* Added: Redundant Saved Variables will now be removed automatically.
* Added: Internal encounter duration timers in preparation for OSD.
* Added: Time taken message after encounter wipes/victories.
* Added: French support for Murdantix Encounter.
* Added: New internal language dictionary interface.
* Added: Akylios framework. *Encounter start/wipe for Phase 1 only. (test)