@@ -1,4 +1,7 @@
 v0.3.7
+* New: Tank-Swap Monitor (T-SM).
+* Added: Tank-Swap Monitor to Murdantix.
+* Added: Tank-Swap Options to GUI Options window. 
 * Added: Grugonim boss encounter (template).
 * Added: Inwar Darktide boss encounter (template).
 * Added: Sicaron boss encounter (template).
